# API

./: .gitignore  README.md
CodeShow - Flask/: .gitignore  .secrets.toml  requirements.txt  settings.toml
CodeShow - Flask/anotations/: flask.md
CodeShow - Flask/delivery/templates/: base.html  userform.html
Curso de Flask/: config.py  readme.md  readme.txt  requeriments.txt
Curso de Flask/app/: __init__.py
Curso de Flask/app/controllers/: default.py
Curso de Flask/app/models/: forms.py  tables.py
Curso de Flask/app/templates/: base.html  index.html  login.html
Djando-DIO/agenda/: db.sqlite3
Djando-DIO/agenda/agenda/: settings.py  urls.py
Djando-DIO/agenda/core/: admin.py  models.py  views.py
Djando-DIO/agenda/templates/: agenda.html  evento.html  historico.html  login.html  model-footer.html  model-header.html  model-page.html
Djando-DIO/hello_django/core/: views.py
Djando-DIO/hello_django/hello_django/: settings.py  urls.py
FastAPI/: anotation.md  main.py
Python com Flask e REST API/: README.md  requirements.txt  run.py
Python com Flask e REST API/api_atividade/: app.py  models.py  utils.py
Python com Flask e REST API/dev_api/: app.py  app_restful.py  habilidades.py  requeriments.txt
Python com Flask e REST API/primeira_api/: app.py
packpage_build/: anotation.md
packpage_build/abacate_pack/: pyproject.toml
packpage_build/abacate_pack/abacate_pack/: cli.py
packpage_build/abacate_pack/tests/: test_abacate_pack.py
packpage_build/classic/: setup.py
packpage_build/classic/meu_pacote.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+5 files in other folders)
